--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,6 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color:;
 }
 
 body {
@@ -47,6 +46,7 @@ body {
   right: 0;
   z-index: -1;
   filter: blur(3px);
+  opacity: 25%;
 }
 
 .cover-container {
@@ -106,6 +106,11 @@ body {
  */
 .cover {
   padding: 0 1.5rem;
+  color: #333;
+}
+
+.inner {
+  color: #333;
 }
 
 .cover .btn-lg {
@@ -117,7 +122,6 @@ body {
   background-color: #333;
   color: #fff;
 }
-
 
 /*
  * Footer
