--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ body {
 .bg {
   background-image: url(../img/landscaping.jpg);
   background-size: 100%;
+  background-repeat: no-repeat;
   height: 100%;
   position: fixed;
   left: 0;
